--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6773a3">  <td>20/11/19 19:19:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.LoginTest@68567e20]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@199449817</td>   <td></td> </tr>
-<tr bgcolor="82b2fa">  <td>20/11/19 19:19:38</td>   <td>6024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.userLoginTest()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.LoginTest@68567e20]">userLoginTest</td> 
-  <td>main@199449817</td>   <td></td> </tr>
+<tr bgcolor="8c7381">  <td>20/12/06 14:25:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UseCaseTest.registrationTest()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@a74868d]">registrationTest</td> 
+  <td>main@336484883</td>   <td></td> </tr>
+<tr bgcolor="a38d86">  <td>20/12/06 14:25:26</td>   <td>-5865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@a74868d]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@336484883</td>   <td></td> </tr>
 </table>
