--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,3 +1,6 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>webler.szakdolgozat.honeyAndSalt.UseCaseTest.mainPageTest</td></tr>
+<tr><td>webler.szakdolgozat.honeyAndSalt.UseCaseTest.searchTest</td></tr>
+<tr><td>webler.szakdolgozat.honeyAndSalt.UseCaseTest.registrationTest</td></tr>
+<tr><td>webler.szakdolgozat.honeyAndSalt.UseCaseTest.tryEveryNavigationElement</td></tr>
+<tr><td>webler.szakdolgozat.honeyAndSalt.UseCaseTest.editRecipeTestAdmin</td></tr>
 </table>
