--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\esztz\AppData\Local\Temp\testng-eclipse-1304298454\testng-customsuite.xml</span>
+                    <span>C:\Users\esztz\AppData\Local\Temp\testng-eclipse--1843850031\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">5 methods,   5 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,7 +104,27 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="webler.szakdolgozat.honeyAndSalt.UseCaseTest" hash-for-method="editRecipeTestAdmin">editRecipeTestAdmin</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="webler.szakdolgozat.honeyAndSalt.UseCaseTest" hash-for-method="favouriteTest">favouriteTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="webler.szakdolgozat.honeyAndSalt.UseCaseTest" hash-for-method="registrationTest">registrationTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="webler.szakdolgozat.honeyAndSalt.UseCaseTest" hash-for-method="searchTest">searchTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="webler.szakdolgozat.honeyAndSalt.UseCaseTest" hash-for-method="tryEveryNavigationElement">tryEveryNavigationElement</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,9 +147,37 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
+                  <a name="editRecipeTestAdmin">
+                  </a> <!-- editRecipeTestAdmin -->
+                  <span class="method-name">editRecipeTestAdmin</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="favouriteTest">
                   </a> <!-- favouriteTest -->
                   <span class="method-name">favouriteTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="registrationTest">
+                  </a> <!-- registrationTest -->
+                  <span class="method-name">registrationTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="searchTest">
+                  </a> <!-- searchTest -->
+                  <span class="method-name">searchTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="tryEveryNavigationElement">
+                  </a> <!-- tryEveryNavigationElement -->
+                  <span class="method-name">tryEveryNavigationElement</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +185,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\esztz\AppData\Local\Temp\testng-eclipse-1304298454\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\esztz\AppData\Local\Temp\testng-eclipse--1843850031\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,11 +194,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;webler.szakdolgozat.honeyAndSalt.UseCaseTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;favouriteTest&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- webler.szakdolgozat.honeyAndSalt.UseCaseTest --&gt;
+      &lt;class name=&quot;webler.szakdolgozat.honeyAndSalt.UseCaseTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,16 +234,32 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(5);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'favouriteTest')
+data.setCell(0, 1, 'searchTest')
 data.setCell(0, 2, 'webler.szakdolgozat.honeyAndSalt.UseCaseTest')
-data.setCell(0, 3, 10288);
+data.setCell(0, 3, 11340);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'favouriteTest')
+data.setCell(1, 2, 'webler.szakdolgozat.honeyAndSalt.UseCaseTest')
+data.setCell(1, 3, 10278);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'editRecipeTestAdmin')
+data.setCell(2, 2, 'webler.szakdolgozat.honeyAndSalt.UseCaseTest')
+data.setCell(2, 3, 10224);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'tryEveryNavigationElement')
+data.setCell(3, 2, 'webler.szakdolgozat.honeyAndSalt.UseCaseTest')
+data.setCell(3, 3, 9048);
+data.setCell(4, 0, 4)
+data.setCell(4, 1, 'registrationTest')
+data.setCell(4, 2, 'webler.szakdolgozat.honeyAndSalt.UseCaseTest')
+data.setCell(4, 3, 8542);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 10 seconds</span>
+              <span class="suite-total-time">Total running time: 49 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -214,22 +274,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">4 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">webler.szakdolgozat.honeyAndSalt.UseCaseTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">searchTest</span>
-                <br/>
-                <span class="ignored-method-name">registrationTest</span>
-                <br/>
-                <span class="ignored-method-name">tryEveryNavigationElement</span>
-                <br/>
-                <span class="ignored-method-name">editRecipeTestAdmin</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -244,9 +291,61 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">favouriteTest</span>
-                <span class="method-start">5867 ms</span>
+                <span class="method-name">editRecipeTestAdmin</span>
+                <span class="method-start">5825 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">16051 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">16091 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">favouriteTest</span>
+                <span class="method-start">21228 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">31507 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">31545 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">registrationTest</span>
+                <span class="method-start">36731 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">45274 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">45309 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">searchTest</span>
+                <span class="method-start">50496 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">61837 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">setUp</span>
+                <span class="method-start">61872 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">tryEveryNavigationElement</span>
+                <span class="method-start">67066 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">tearDown</span>
+                <span class="method-start">76115 ms</span>
+              </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
