--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8c7381">  <td>20/12/06 16:58:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UseCaseTest.favouriteTest()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@a74868d]">favouriteTest</td> 
-  <td>main@336484883</td>   <td></td> </tr>
-<tr bgcolor="a38d86">  <td>20/12/06 16:58:08</td>   <td>-5865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@a74868d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@336484883</td>   <td></td> </tr>
+<tr bgcolor="93d195">  <td>20/12/06 17:13:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UseCaseTest.editRecipeTestAdmin()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">editRecipeTestAdmin</td> 
+  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="93d195">  <td>20/12/06 17:13:44</td>   <td>15403</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UseCaseTest.favouriteTest()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">favouriteTest</td> 
+  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="93d195">  <td>20/12/06 17:13:59</td>   <td>30906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UseCaseTest.registrationTest()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">registrationTest</td> 
+  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="93d195">  <td>20/12/06 17:14:13</td>   <td>44671</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UseCaseTest.searchTest()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">searchTest</td> 
+  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:13:22</td>   <td>-5822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:13:39</td>   <td>10266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:13:54</td>   <td>25720</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:14:08</td>   <td>39484</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:14:24</td>   <td>56047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setUp()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:13:38</td>   <td>10226</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:13:54</td>   <td>25682</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:14:08</td>   <td>39449</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:14:24</td>   <td>56012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="b0bfab">  <td>20/12/06 17:14:39</td>   <td>70290</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1615039080</td>   <td></td> </tr>
+<tr bgcolor="93d195">  <td>20/12/06 17:14:29</td>   <td>61241</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UseCaseTest.tryEveryNavigationElement()[pri:0, instance:webler.szakdolgozat.honeyAndSalt.UseCaseTest@396e2f39]">tryEveryNavigationElement</td> 
+  <td>main@1615039080</td>   <td></td> </tr>
 </table>
